Implemented feature to add users to the lobby
