# inbound-controller-ws/src/main/java/org/windat/ws/controller/LobbyRestController.java
@@ -1,28 +1,101 @@
 package org.windat.ws.controller;
 
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+import org.windat.domain.UserRole;
 import org.windat.domain.entity.Lobby;
+import org.windat.domain.entity.User;
+import org.windat.domain.exceptions.LobbyFullException;
+import org.windat.domain.exceptions.LobbyNotFoundException;
+import org.windat.domain.exceptions.UserAlreadyInLobbyException;
 import org.windat.domain.service.LobbyFacade;
+import org.windat.domain.service.UserFacade;
 import org.windat.rest.api.LobbiesApi;
 import org.windat.rest.dto.LobbyCreateRequestDTODto;
 import org.windat.rest.dto.LobbyDto;
+import org.windat.rest.dto.UserDto;
 import org.windat.ws.mapper.LobbyMapper;
+import org.windat.ws.mapper.UserMapper;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
+import org.springframework.security.core.context.SecurityContextHolder;
+
 @RestController
-public class LobbyRestController implements LobbiesApi{
+public class LobbyRestController implements LobbiesApi {
 
     private final LobbyFacade lobbyFacade;
     private final LobbyMapper lobbyMapper;
 
-    public LobbyRestController(LobbyFacade lobbyFacade, LobbyMapper lobbyMapper) {
+    private final UserFacade userFacade;
+    private final UserMapper userMapper;
+
+    public LobbyRestController(
+            LobbyFacade lobbyFacade,
+            LobbyMapper lobbyMapper,
+            UserFacade userFacade,
+            UserMapper userMapper
+    ) {
         this.lobbyFacade = lobbyFacade;
         this.lobbyMapper = lobbyMapper;
+        this.userFacade = userFacade;
+        this.userMapper = userMapper;
+    }
+
+    /**
+     * Retrieve user from JWT token. If exists in application database, add to lobby.
+     * If not, create this user in application database and then add to the lobby.
+     *
+     * @param lobbyId The ID of the lobby to add the user to.
+     * @return ResponseEntity containing the updated LobbyDto or an error status.
+     * @throws LobbyNotFoundException if the lobby does not exist.
+     * @throws LobbyFullException if the lobby is full.
+     * @throws UserAlreadyInLobbyException if the user is already in the lobby.
+     */
+    @Override
+    public ResponseEntity<LobbyDto> addUserToLobby(Integer lobbyId) {
+
+//        Get user from jwt token
+        UserDto userDto = (UserDto) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        UUID keycloakId = userDto.getKeycloakId();
+        String username = userDto.getLoginName();
+
+//        Get lobby or throw error if optional returns null
+        Lobby lobby = lobbyFacade.readOne(lobbyId).orElseThrow(
+                () -> new LobbyNotFoundException("Lobby with ID " + lobbyId + " not found.")
+        );
+
+//        Get users if exists in application database or create new if not
+        User user = userFacade.readOne(keycloakId).orElseGet(() -> {
+            User newUser = new User();
+            newUser.setLoginName(username);
+            newUser.setKeycloakId(keycloakId);
+            newUser.setUserRoleEnum(UserRole.USER_ROLE);
+
+            return userFacade.create(newUser);
+        });
+
+//        Check if lobby is full
+        if (lobby.isFull()) {
+            throw new LobbyFullException("Lobby is already full.");
+        }
+
+//        Check if user already exist in lobby
+        if (lobby.containsUser(user)) {
+            throw new UserAlreadyInLobbyException("User " + username + " is already in lobby.");
+        }
+
+        lobby.addUser(user);
+
+//        Persist user updates
+        userFacade.update(user);
+
+//        Persist updated lobby
+        Lobby updatedLobby = lobbyFacade.update(lobby);
+
+        return ResponseEntity.ok(lobbyMapper.toDto(updatedLobby));
     }
 
     @Override
@@ -30,7 +103,7 @@ public class LobbyRestController implements LobbiesApi{
         Lobby newLobby = this.lobbyMapper.dtoToEntity(lobbyCreateRequestDTODto);
         Lobby savedLobby = this.lobbyFacade.create(newLobby);
         LobbyDto lobbyDto = this.lobbyMapper.toDto(savedLobby);
-        return ResponseEntity.ok(lobbyDto);
+        return ResponseEntity.status(HttpStatus.CREATED).body(lobbyDto);
     }
 
     @Override
